[package]
name = "zstd-seekable-s3"
description = "Seekable zstd-compressed S3 objects."
version = "0.7.0"
authors = ["Mateusz Kowalczyk <fuuzetsu@fuuzetsu.co.uk>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/Fuuzetsu/zstd-seekable-s3"
homepage = "https://github.com/Fuuzetsu/zstd-seekable-s3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
futures = "0.3"
rusoto_core = { version = "0.48", default-features = false }
rusoto_s3 = { version = "0.48", default-features = false }
tokio = "1.1"
zstd-seekable = "0.1.7"
pin-project-lite = "0.2"
parking_lot = "0.11"

[dev-dependencies]
env_logger = "0.8"
rusoto_credential = "0.48"
rusoto_sts = { version = "0.48", default-features = false }
structopt = "0.3"
tempfile = "3.2"
tokio = { version = "1.1", features = ["fs"] }

[features]
default = ["rusoto_core/default", "rusoto_s3/default"]
rustls = ["rusoto_core/rustls", "rusoto_s3/rustls"]
